# Pomodoro

./: .gitignore  Makefile  alembic.ini  async_test.py  dependency.py  docker-compose.test.yml  docker-compose.yml  exception.py  fixtures.py  main.py  pomodoro.sqlite  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 191518415b84_alter_user_model_yandex_add.py  1a54679e77b1_alter_user_model.py  533347c7715f_add_column_user_id_in_table_tasks.py  60aecd609dc0_change_categories_type.py  77898482af7a_extend_user_profile.py  94cfb8ee7853_delete_test_column.py  992328b09ab2_access_token_nullable.py  b3d5bada8f38_detete_access_token.py  c977d2de4c32_test.py  d5764fe31577_alter_user_model_yandex_add.py  e464afda0efa_user_init.py  f6dfb2607bcc_init.py
app/: dependency.py  main.py  settings.py
app/client/: google.py  yandex.py
app/handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
app/models/: __init__.py  tasks.py  user.py
app/repository/: cache_task.py  task.py  user.py
app/schema/: __init__.py  task.py
app/service/: __init__.py  auth.py  task.py  user.py
app/tasks/: handlers.py  service.py
cache/: accessor.py
client/: google.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
service/: auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: infrastructure.py  settings.py
worker/: celery.py
(+24 files in other folders)
