[project]
name = "pomodore-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "ustimenko",email = "ustimenko@nsgc.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic (>=2.13.1,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.5.0,<4.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "twisted (>=25.5.0,<26.0.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest-factoryboy (>=2.8.1,<3.0.0)",
    "faker (>=40.15.0,<41.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
]

[tool.poetry]
packages = [{include = "pomodore_poetry", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
